--- a/index.html
+++ b/index.html
@@ -5,18 +5,79 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ann's Portfolio</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="container">
-      <video class="back-vid" loop autoplay muted plays-inline
-      src="videos/galaxy.mp4" type="video/mp4"
+      <video class="back-vid" loop autoplay muted plays-inline>
+        <source src="videos/galaxy.mp4" type="video/mp4" />
+      </video>
 
       <header>
         <div class="left">
-          <img src="images/miladicode.png" alt="logo">
-          <
+          <img src="images/ixel.png" alt="logo" />
+          <h1>Ann Rose Mathew</h1>
+        </div>
+
+        <ul>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Skills</a></li>
+          <li><a href="#">Projects</a></li>
+          <li><a href="#">Certifications</a></li>
+        </ul>
+
+        <div class="box-icons">
+          <a href="#"><i class="bx bxl-linkedin-square"></i></a>
+          <a href="#"><i class="bx bxl-github"></i></a>
+          <a href="#"><i class="bx bxl-gmail"></i></a>
         </div>
       </header>
+
+      <div class="blackhole-box">
+        <video class="back-vid" loop autoplay muted plays-inline>
+          <source src="videos/blackhole.mp4" type="video/mp4" />
+        </video>
+      </div>
+
+      <section class="hero">
+        <div class="hero-info">
+          <div class="hero-info-title">
+            <i class="bx bxl-sketch"></i>
+            Ann Rose's Portfolio
+          </div>
+
+          <h1>
+            < Hi! I'm Ann,<br />a
+            <span class="gradient">Computer Science</span> Enthusiast />
+            <span class="gradient"></span>
+          </h1>
+          <!-- <h2><span class="gradient"></span>ctrl + alt + innovate</span</h2> -->
+
+          <p>
+            Hi!I'm a software engineer in my pre-final year of undergraduate in
+            bachelor of technology in my passion computer science engineering.
+            I'm fascinated by large-scale, high-impact products and aspire to
+            work in domains that can create a difference and a better change.
+          </p>
+
+          <button><i class="bx bxs-send"></i> Contact Me</button>
+        </div>
+
+        <div class="hero-vid-box">
+          <video
+            autoplay
+            loop
+            muted
+            plays-inline
+            src="videos/hero-video.mp4"
+            type="video/mp4"
+          ></video>
+        </div>
+        <div class="scroll-down"></div>
+      </section>
     </div>
     <script src="app.js"></script>
   </body>
