--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
           <a href="#"><i class="bx bxl-gmail"></i></a>
         </div>
       </header>
-
       <div class="blackhole-box">
         <video class="back-vid" loop autoplay muted plays-inline>
           <source src="videos/blackhole.mp4" type="video/mp4" />
@@ -77,6 +76,147 @@
           ></video>
         </div>
         <div class="scroll-down"></div>
+      </section>
+
+      <section class="info-section">
+        <h1 class="section-title">Hello,there🫡</h1>
+        <div class="info-cards">
+          <div class="card">
+            <h1>Hi there!I'm Ann Rose🌹</h1>
+            <p>
+              I have honed my skills in full stack development,ml creating real
+              time projects .
+            </p>
+            <img src="images/grid1.png" alt="card-image" />
+          </div>
+          <div class="card">
+            <h1>Tech Stack</h1>
+            <p>
+              In my arsenal im equipped with different languages like C,C++.
+            </p>
+            <img src="images/grid2.png" alt="card-image" />
+          </div>
+          <div class="card">
+            <h1>
+              I'm very flexible with timezone communication s and locations
+            </h1>
+            <p>Im based in kerala,India and open to work remote worldwide.</p>
+            <video
+              autoplay
+              lopp
+              muted
+              plays
+              inline
+              src="videos/glob.mp4"
+              type="video/mp4"
+            ></video>
+            <button><i class="bx bx-link-external"></i>Contact me</button>
+          </div>
+          <div class="card">
+            <h1>Passion?</h1>
+            <p>
+              I love solving problems and building things through
+              code.Programming isn't just my profession-it's my passion.I enjoy
+              exploring new technologies and enhancing my skills.
+            </p>
+            <img src="images/grid4.png" alt="card-image" />
+          </div>
+        </div>
+      </section>
+
+      <section class="my-projects">
+        <h1 class="section-title">My Projects😎</h1>
+        <div class="project-card">
+          <div class="project-vidbox">
+            <video id="projectVideo1" src="videos/project1.mp4"></video>
+            <div class="hover-sign"></div>
+          </div>
+          <div class="project-info">
+            <h1>Water <span class="gradient">supply</span> Management</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad
+              labore nostrum sapiente, odio blanditiis culpa vero voluptates
+              libero vitae ratione laborum possimus dolorem quos, excepturi
+              officiis cupiditate itaque eum iste?
+            </p>
+            <button><i class="bx bx-link-external"></i>Website</button>
+          </div>
+        </div>
+        <div class="project-card">
+          <div class="project-vidbox">
+            <video id="projectVideo2" src="videos/project2.mp4"></video>
+          </div>
+          <div class="project-info">
+            <h1>diabetes <span class="gradient">prediction</span></h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad
+              labore nostrum sapiente, odio blanditiis culpa vero voluptates
+              libero vitae ratione laborum possimus dolorem quos, excepturi
+              officiis cupiditate itaque eum iste?
+            </p>
+            <button><i class="bx bx-link-external"></i>Website</button>
+          </div>
+        </div>
+        <div class="project-card">
+          <div class="project-vidbox">
+            <video id="projectVideo3" src="videos/project3.mp4"></video>
+          </div>
+          <div class="project-info">
+            <h1>Agrima e commerce</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad
+              labore nostrum sapiente, odio blanditiis culpa vero voluptates
+              libero vitae ratione laborum possimus dolorem quos, excepturi
+              officiis cupiditate itaque eum iste?
+            </p>
+            <button><i class="bx bx-link-external"></i>Website</button>
+          </div>
+        </div>
+        <div class="project-card">
+          <div class="project-vidbox">
+            <video id="projectVideo4" src="videos/project2.mp4"></video>
+          </div>
+          <div class="project-info">
+            <h1>Portfolio Website</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad
+              labore nostrum sapiente, odio blanditiis culpa vero voluptates
+              libero vitae ratione laborum possimus dolorem quos, excepturi
+              officiis cupiditate itaque eum iste?
+            </p>
+            <button><i class="bx bx-link-external"></i>Website</button>
+          </div>
+        </div>
+        <div class="project-card">
+          <div class="project-vidbox">
+            <video id="projectVideo5" src="videos/project3.mp4"></video>
+          </div>
+          <div class="project-info">
+            <h1>Sushi Website</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad
+              labore nostrum sapiente, odio blanditiis culpa vero voluptates
+              libero vitae ratione laborum possimus dolorem quos, excepturi
+              officiis cupiditate itaque eum iste?
+            </p>
+            <button><i class="bx bx-link-external"></i>Website</button>
+          </div>
+        </div>
+        <div class="project-card">
+          <div class="project-vidbox">
+            <video id="projectVideo6" src="videos/project1.mp4"></video>
+          </div>
+          <div class="project-info">
+            <h1>pothole prediction using satellite</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad
+              labore nostrum sapiente, odio blanditiis culpa vero voluptates
+              libero vitae ratione laborum possimus dolorem quos, excepturi
+              officiis cupiditate itaque eum iste?
+            </p>
+            <button><i class="bx bx-link-external"></i>Website</button>
+          </div>
+        </div>
       </section>
     </div>
     <script src="app.js"></script>
