--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         </div>
 
         <ul>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Skills</a></li>
-          <li><a href="#">Projects</a></li>
-          <li><a href="#">Certifications</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#skills">Skills</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#certifications">Certifications</a></li>
         </ul>
 
         <div class="box-icons">
@@ -36,13 +36,13 @@
         </div>
       </header>
       <div class="blackhole-box">
-        <video class="back-vid" loop autoplay muted plays-inline>
+        <video class="back-vid" loop autoplay muted playsinline>
           <source src="videos/blackhole.mp4" type="video/mp4" />
         </video>
       </div>
 
       <section class="hero">
-        <div class="hero-info">
+        <div class="hero-info autoBlur">
           <div class="hero-info-title">
             <i class="bx bxl-sketch"></i>
             Ann Rose's Portfolio
@@ -56,8 +56,8 @@
           <!-- <h2><span class="gradient"></span>ctrl + alt + innovate</span</h2> -->
 
           <p>
-            Hi!I'm a software engineer in my pre-final year of undergraduate in
-            bachelor of technology in my passion computer science engineering.
+            Hi! I'm a software engineering enthusiast in my pre-final year of
+            pursuing a Bachelor's degree in Computer Science and Engineering.
             I'm fascinated by large-scale, high-impact products and aspire to
             work in domains that can create a difference and a better change.
           </p>
@@ -67,10 +67,11 @@
 
         <div class="hero-vid-box">
           <video
+            class="autoblur"
             autoplay
             loop
             muted
-            plays-inline
+            playsinline
             src="videos/hero-video.mp4"
             type="video/mp4"
           ></video>
@@ -84,8 +85,8 @@
           <div class="card">
             <h1>Hi there!I'm Ann Rose🌹</h1>
             <p>
-              I have honed my skills in full stack development,ml creating real
-              time projects .
+              I’ve honed my skills in full-stack development and machine
+              learning by creating real-time projects.
             </p>
             <img src="images/grid1.png" alt="card-image" />
           </div>
@@ -100,13 +101,15 @@
             <h1>
               I'm very flexible with timezone communication s and locations
             </h1>
-            <p>Im based in kerala,India and open to work remote worldwide.</p>
+            <p>
+              I'm based in Kerala, India and open to remote opportunities
+              worldwide
+            </p>
             <video
               autoplay
-              lopp
+              loop
               muted
-              plays
-              inline
+              playsinline
               src="videos/glob.mp4"
               type="video/mp4"
             ></video>
@@ -127,7 +130,7 @@
       <section class="my-projects">
         <h1 class="section-title">My Projects😎</h1>
         <div class="project-card">
-          <div class="project-vidbox">
+          <div class="project-vidbox autoBlur">
             <video id="projectVideo1" src="videos/project1.mp4"></video>
             <div class="hover-sign"></div>
           </div>
@@ -143,7 +146,7 @@
           </div>
         </div>
         <div class="project-card">
-          <div class="project-vidbox">
+          <div class="project-vidbox autoBlur">
             <video id="projectVideo2" src="videos/project2.mp4"></video>
           </div>
           <div class="project-info">
@@ -157,8 +160,9 @@
             <button><i class="bx bx-link-external"></i>Website</button>
           </div>
         </div>
+
         <div class="project-card">
-          <div class="project-vidbox">
+          <div class="project-vidbox autoBlur">
             <video id="projectVideo3" src="videos/project3.mp4"></video>
           </div>
           <div class="project-info">
@@ -173,7 +177,7 @@
           </div>
         </div>
         <div class="project-card">
-          <div class="project-vidbox">
+          <div class="project-vidbox autoBlur">
             <video id="projectVideo4" src="videos/project2.mp4"></video>
           </div>
           <div class="project-info">
@@ -188,7 +192,7 @@
           </div>
         </div>
         <div class="project-card">
-          <div class="project-vidbox">
+          <div class="project-vidbox autoBlur">
             <video id="projectVideo5" src="videos/project3.mp4"></video>
           </div>
           <div class="project-info">
@@ -202,23 +206,110 @@
             <button><i class="bx bx-link-external"></i>Website</button>
           </div>
         </div>
-        <div class="project-card">
-          <div class="project-vidbox">
-            <video id="projectVideo6" src="videos/project1.mp4"></video>
-          </div>
-          <div class="project-info">
-            <h1>pothole prediction using satellite</h1>
+      </section>
+
+      <section class="skills-section">
+        <h1 class="section-title">My Skills💪</h1>
+        <section class="skills-box">
+          <img
+            class="skills-image"
+            src="images/digital brain.png"
+            alt="skills-image"
+          />
+
+          <div class="designer">
+            <h1 class="gradient">Designer <i class="bx bx-laptop"></i></h1>
             <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad
-              labore nostrum sapiente, odio blanditiis culpa vero voluptates
-              libero vitae ratione laborum possimus dolorem quos, excepturi
-              officiis cupiditate itaque eum iste?
+              I have expertise in HTML,CSS,Javascript and design tools like
+              Fignma .my strength lies in building aestheticds with
+              functionality to create seamless user experience.
             </p>
-            <button><i class="bx bx-link-external"></i>Website</button>
+          </div>
+
+          <div class="coder">
+            <h1 class="gradient">Coder<i class="bx bx-code-block"></i></h1>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id
+              praesentium aliquam possimus voluptatibus! Quisquam odio accusamus
+              totam qui eveniet. Voluptatum ex nemo praesentium cum vero rerum
+              recusandae excepturi ullam quasi.
+            </p>
+          </div>
+
+          <div
+            class="slider"
+            reverse="true"
+            style="--width: 100px; --height: 100px; --quantity: 9"
+          >
+            <div class="list">
+              <div class="item" style="--position: 1">
+                <img src="images/1.png" alt="slider-image" />
+              </div>
+              <div class="item" style="--position: 2">
+                <img src="images/2.png" alt="slider-image" />
+              </div>
+              <div class="item" style="--position: 3">
+                <img src="images/3.png" alt="slider-image" />
+              </div>
+              <div class="item" style="--position: 4">
+                <img src="images/4.png" alt="slider-image" />
+              </div>
+              <div class="item" style="--position: 5">
+                <img src="images/5.png" alt="slider-image" />
+              </div>
+              <div class="item" style="--position: 6">
+                <img src="images/6.png" alt="slider-image" />
+              </div>
+              <div class="item" style="--position: 7">
+                <img src="images/7.png" alt="slider-image" />
+              </div>
+              <div class="item" style="--position: 8">
+                <img src="images/8.png" alt="slider-image" />
+              </div>
+              <div class="item" style="--position: 9">
+                <img src="images/9.png" alt="slider-image" />
+              </div>
+            </div>
+          </div>
+        </section>
+      </section>
+
+      <section class="contact-section">
+        <h1 class="section-title">Lets talk😊</h1>
+        <div class="social-box autoBlur">
+          <a href="#"><i class="bx bx-phone-call"></i>+91 9946311483</a>
+          <a href="#"><i class="bx bxl-telegram"></i>Contact me</a>
+          <a href="#"><i class="bx bxl-linkedin"></i>LinkedIn</a>
+
+          <div class="social-icons autoBlur">
+            <a href="#"><i class="bx bxl-linkedin"></i></a>
+            <a href="#"><i class="bx bxl-github"></i></a>
           </div>
         </div>
+        <div class="contact-box">
+          <p>let's connect</p>
+
+          <p>Full Name</p>
+          <input type="text" placeholder="Your Full Name" />
+
+          <p>Email Address</p>
+          <input type="text" placeholder="Your Email" />
+
+          <p>Your Message</p>
+          <input
+            class="input-message"
+            type="text"
+            placeholder="Share your thoughts...."
+          />
+
+          <button><i class="bx bxs-send"></i>Send Message</button>
+        </div>
       </section>
+      <footer>
+        <h1>Copyright ©️ ARMK,Made with❤️ by annrose227</h1>
+      </footer>
     </div>
+
     <script src="app.js"></script>
   </body>
 </html>
