--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       </section>
 
       <section class="info-section">
-        <h1 class="section-title">Hello,there🫡</h1>
+        <h1 class="section-title autoDisplay">Hello,there🫡</h1>
         <div class="info-cards">
           <div class="card">
             <h1>Hi there!I'm Ann Rose🌹</h1>
@@ -128,13 +128,13 @@
       </section>
 
       <section class="my-projects">
-        <h1 class="section-title">My Projects😎</h1>
+        <h1 class="section-title autoDisplay">My Projects😎</h1>
         <div class="project-card">
           <div class="project-vidbox autoBlur">
             <video id="projectVideo1" src="videos/project1.mp4"></video>
             <div class="hover-sign"></div>
           </div>
-          <div class="project-info">
+          <div class="project-info fadeInRight">
             <h1>Water <span class="gradient">supply</span> Management</h1>
             <p>
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad
@@ -149,7 +149,7 @@
           <div class="project-vidbox autoBlur">
             <video id="projectVideo2" src="videos/project2.mp4"></video>
           </div>
-          <div class="project-info">
+          <div class="project-info fadeInRight">
             <h1>diabetes <span class="gradient">prediction</span></h1>
             <p>
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad
@@ -165,7 +165,7 @@
           <div class="project-vidbox autoBlur">
             <video id="projectVideo3" src="videos/project3.mp4"></video>
           </div>
-          <div class="project-info">
+          <div class="project-info fadeInRight">
             <h1>Agrima e commerce</h1>
             <p>
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad
@@ -180,7 +180,7 @@
           <div class="project-vidbox autoBlur">
             <video id="projectVideo4" src="videos/project2.mp4"></video>
           </div>
-          <div class="project-info">
+          <div class="project-info fadeInRight">
             <h1>Portfolio Website</h1>
             <p>
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad
@@ -195,7 +195,7 @@
           <div class="project-vidbox autoBlur">
             <video id="projectVideo5" src="videos/project3.mp4"></video>
           </div>
-          <div class="project-info">
+          <div class="project-info fadeInRight">
             <h1>Sushi Website</h1>
             <p>
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad
@@ -209,7 +209,7 @@
       </section>
 
       <section class="skills-section">
-        <h1 class="section-title">My Skills💪</h1>
+        <h1 class="section-title autoDisplay">My Skills💪</h1>
         <section class="skills-box">
           <img
             class="skills-image"
@@ -217,7 +217,7 @@
             alt="skills-image"
           />
 
-          <div class="designer">
+          <div class="designer autoDisplay">
             <h1 class="gradient">Designer <i class="bx bx-laptop"></i></h1>
             <p>
               I have expertise in HTML,CSS,Javascript and design tools like
@@ -226,7 +226,7 @@
             </p>
           </div>
 
-          <div class="coder">
+          <div class="coder autoDisplay">
             <h1 class="gradient">Coder<i class="bx bx-code-block"></i></h1>
             <p>
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id
@@ -275,7 +275,7 @@
       </section>
 
       <section class="contact-section">
-        <h1 class="section-title">Lets talk😊</h1>
+        <h1 class="section-title autoDisplay">Lets talk😊</h1>
         <div class="social-box autoBlur">
           <a href="#"><i class="bx bx-phone-call"></i>+91 9946311483</a>
           <a href="#"><i class="bx bxl-telegram"></i>Contact me</a>
