some minor revision

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div class="container">
-      <video class="back-vid" loop autoplay muted plays-inline>
+      <video class="back-vid" loop autoplay muted playsinline>
         <source src="videos/galaxy.mp4" type="video/mp4" />
       </video>
 
@@ -178,30 +178,29 @@
         </div>
         <div class="project-card">
           <div class="project-vidbox autoBlur">
-            <video id="projectVideo4" src="videos/project2.mp4"></video>
+            <video id="projectVideo4" src="videos/portfolio.mp4"></video>
           </div>
           <div class="project-info fadeInRight">
             <h1>Portfolio Website</h1>
             <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad
-              labore nostrum sapiente, odio blanditiis culpa vero voluptates
-              libero vitae ratione laborum possimus dolorem quos, excepturi
-              officiis cupiditate itaque eum iste?
+              A stunning portfolio website with smooth animations and a modern
+              design.
             </p>
             <button><i class="bx bx-link-external"></i>Website</button>
           </div>
         </div>
         <div class="project-card">
           <div class="project-vidbox autoBlur">
-            <video id="projectVideo5" src="videos/project3.mp4"></video>
+            <video id="projectVideo5" src="videos/sushiman.mp4"></video>
           </div>
           <div class="project-info fadeInRight">
             <h1>Sushi Website</h1>
             <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad
-              labore nostrum sapiente, odio blanditiis culpa vero voluptates
-              libero vitae ratione laborum possimus dolorem quos, excepturi
-              officiis cupiditate itaque eum iste?
+              Welcome to SushiMan, a sleek and modern sushi restaurant website
+              built with HTML, CSS, and JavaScript. This project showcases an
+              elegant UI with a responsive design. This is a sushi website
+              showcasing popular food, trending sushi, and drinks using HTML and
+              CSS with smooth subtle animations. 🚀 Live Demo: SushiMan Website
             </p>
             <button><i class="bx bx-link-external"></i>Website</button>
           </div>
